some changes in the settings file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   application:
     #应用的名称，可选
-    name: reggie_take_out
+    name: yjmh_take_out
   shardingsphere:
     datasource:
       names:
@@ -12,14 +12,14 @@ spring:
       master:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.138.100:3306/reggie?characterEncoding=utf-8
+        url: jdbc:mysql://192.168.138.100:3306/takeout?characterEncoding=utf-8
         username: root
         password: root
       # 从数据源
       slave:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.138.101:3306/reggie?characterEncoding=utf-8
+        url: jdbc:mysql://192.168.138.101:3306/takeout?characterEncoding=utf-8
         username: root
         password: root
     masterslave:
